--- a/package.json
+++ b/package.json
@@ -21,11 +21,15 @@
   "homepage": "https://github.com/danloe/Better-Bot#readme",
   "dependencies": {
     "@discordjs/builders": "^0.13.0",
+    "@discordjs/opus": "^0.5.3",
     "@discordjs/rest": "^0.4.1",
+    "@discordjs/voice": "^0.9.0",
     "discord-api-types": "^0.31.2",
     "discord-modals": "^1.3.5",
     "discord.js": "^13.6.0",
-    "dotenv": "^16.0.0"
+    "dotenv": "^16.0.0",
+    "libsodium-wrappers": "^0.7.10",
+    "sodium": "^3.0.2"
   },
   "devDependencies": {
     "eslint": "^8.14.0"
