--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "better-bot",
   "version": "1.0.0",
   "description": "A discord bot better than the last one.",
-  "main": "index.js",
-  "scripts": {},
+  "main": "./prod/index.js",
+  "scripts": {
+    "build": "tsc",
+    "start": "node -r dotenv/config ./prod/index.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/danloe/Better-Bot.git"
@@ -32,6 +35,8 @@
     "sodium": "^3.0.2"
   },
   "devDependencies": {
-    "eslint": "^8.14.0"
+    "eslint": "^8.14.0",
+    "typescript": "^4.6.3",
+    "@types/node": "^17.0.27"
   }
 }
