--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,7 @@
 	"parserOptions": {
 		"ecmaVersion": 2022
 	},
+	"ignorePatterns": ["**/prod/*"],
 	"rules": {
 		"arrow-spacing": ["warn", { "before": true, "after": true }],
 		"brace-style": ["error", "stroustrup", { "allowSingleLine": true }],
@@ -16,7 +17,7 @@
 		"curly": ["error", "multi-line", "consistent"],
 		"dot-location": ["error", "property"],
 		"handle-callback-err": "off",
-		// "indent": ["error", "tab"],
+		"indent": ["error", "tab"],
 		"keyword-spacing": "error",
 		"max-nested-callbacks": ["error", { "max": 4 }],
 		"max-statements-per-line": ["error", { "max": 2 }],
@@ -32,7 +33,7 @@
 		"no-var": "error",
 		"object-curly-spacing": ["error", "always"],
 		"prefer-const": "error",
-		// "quotes": ["error", "single"],
+		"quotes": ["error", "single"],
 		"semi": ["error", "always"],
 		"space-before-blocks": "error",
 		"space-before-function-paren": ["error", {
