--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 BOT_TOKEN="NjgzMjI0MjAzMjYwMTk4OTQz.XlohBA.6PTAU5i_VL_vrwxC_GOmb2-HO60"
+MONGO_URI=""
 CLIENT_ID="683224203260198943"
 GUILD1_ID="236561306583302147"
 GUILD2_ID="683224514272034820"
