--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "name": "better-bot",
   "version": "1.0.0",
   "description": "A discord bot better than the last one.",
-  "main": "./prod/index.js",
+  "main": "src/index.js",
   "scripts": {
-    "build": "tsc",
-    "start": "node -r dotenv/config ./prod/index.js"
+    "startOLD": "node -r dotenv/config ./dist/index.js",
+    "start": "ts-node-dev --respawn --transpile-only --poll ./src/index.ts",
+    "reg-g1": "ts-node-dev --respawn --transpile-only --poll ./src/deploy/g1.ts",
+    "reg-g2": "ts-node-dev --respawn --transpile-only --poll ./src/deploy/g2.ts",
+    "reg-global": "ts-node-dev --respawn --transpile-only --poll ./src/deploy/global.ts",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
@@ -32,11 +36,12 @@
     "discord.js": "^13.6.0",
     "dotenv": "^16.0.0",
     "libsodium-wrappers": "^0.7.10",
+    "mongoose": "^6.3.1",
     "sodium": "^3.0.2"
   },
   "devDependencies": {
+    "@types/node": "^17.0.27",
     "eslint": "^8.14.0",
-    "typescript": "^4.6.3",
-    "@types/node": "^17.0.27"
+    "typescript": "^4.6.3"
   }
 }
