--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "better-bot",
   "version": "1.0.0",
   "description": "A discord bot better than the last one.",
-  "main": "src/index.js",
+  "main": "./dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "start": "tsc && node -r dotenv/config ./dist/index.js",
+    "start": "tsc && ts-node-dev ./src/index.ts",
+    "startdev": "nodemon",
     "startauto": "ts-node-dev --respawn --transpile-only --poll ./src/index.ts",
-    "reg-g1": "ts-node-dev --respawn --transpile-only --poll ./src/deploy/g1.ts",
-    "reg-g2": "ts-node-dev --respawn --transpile-only --poll ./src/deploy/g2.ts",
-    "reg-global": "ts-node-dev --respawn --transpile-only --poll ./src/deploy/global.ts",
+    "reg1": "ts-node-dev --respawn --transpile-only --poll ./src/deploy/g1.ts",
+    "reg2": "ts-node-dev --respawn --transpile-only --poll ./src/deploy/g2.ts",
+    "regg": "ts-node-dev --respawn --transpile-only --poll ./src/deploy/global.ts",
     "build": "tsc"
   },
   "repository": {
@@ -42,6 +44,8 @@
   "devDependencies": {
     "@types/node": "^17.0.27",
     "eslint": "^8.14.0",
+    "nodemon": "^2.0.16",
+    "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
   }
 }
