--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "discord-modals": "^1.3.5",
     "discord.js": "^13.6.0",
     "dotenv": "^16.0.0",
+    "googlethis": "^1.2.9",
     "libsodium-wrappers": "^0.7.10",
     "mongoose": "^6.3.1",
     "sodium": "^3.0.2",
