--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@discordjs/voice": "^0.9.0",
     "discord-api-types": "^0.31.2",
     "discord-modals": "^1.3.5",
+    "discord-tts": "^1.2.1",
     "discord.js": "^13.6.0",
     "dotenv": "^16.0.0",
     "googlethis": "^1.2.9",
