--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "discord-tts": "^1.2.1",
     "discord.js": "^13.6.0",
     "dotenv": "^16.0.0",
+    "easy-trivia": "^2.1.5",
     "googlethis": "^1.2.9",
     "libsodium-wrappers": "^0.7.10",
     "mongoose": "^6.3.1",
