--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "discord.js": "^13.6.0",
     "dotenv": "^16.0.0",
     "easy-trivia": "^2.1.5",
+    "epic-free-games": "^3.1.1",
     "googlethis": "^1.2.9",
     "libsodium-wrappers": "^0.7.10",
     "mongoose": "^6.3.1",
