about info update

--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
-BOT_TOKEN="YOURTOKEN"
+BOT_TOKEN="NjgzMjI0MjAzMjYwMTk4OTQz.GTsoG1.qYlu2yVNZTwlD-9PyAArCCTJG5vZhA0256mPIs"
+MONGO_URI="mongodb+srv://betterbot:Xc4DdA3k1xPI95Tj@cluster0.gec7i.mongodb.net/myFirstDatabase?retryWrites=true&w=majority"
+CLIENT_ID="683224203260198943"
+GUILD1_ID="236561306583302147"
+GUILD2_ID="683224514272034820"
+SC_CLIENTID="Il7XxPRgQW6hwiIgFoPsKPktS0H3fKxA"
+GIT_TOKEN="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"
