--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "tsc && ts-node ./src/index.ts",
     "dev": "tsc && ts-node-dev ./src/index.ts",
-    "deploy": "ts-node-dev --respawn --transpile-only --poll ./src/deploy/global.ts",
+    "deploy": "tsc && ts-node ./src/deploy/global.ts",
     "build": "tsc"
   },
   "repository": {
