--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "googlethis": "^1.2.9",
     "libsodium-wrappers": "^0.7.10",
     "mongoose": "^6.3.4",
+    "node-emoji": "^1.11.0",
     "open-trivia-db": "^1.0.0",
     "sodium": "^3.0.2",
     "soundcloud-downloader": "^1.0.0",
@@ -47,6 +48,7 @@
   },
   "devDependencies": {
     "@types/node": "^17.0.35",
+    "@types/node-emoji": "^1.8.1",
     "eslint": "^8.16.0",
     "ts-node": "^10.8.0",
     "typescript": "^4.6.4"
