closes Use config.json #5

--- a/src/config.json
+++ b/src/config.json
@@ -1,6 +1,8 @@
 {
     "prefix": ">",
-    "activity": "",
+    "activityName": "🦄",
+    "activityType": "WATCHING",
+    "status": "dnd",
     "bitrate": "auto",
     "volume": 1
 }
