--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "dotenv": "^16.0.1",
     "epic-free-games": "^3.1.1",
     "googlethis": "^1.2.9",
+    "jsdom": "^19.0.0",
     "libsodium-wrappers": "^0.7.10",
     "mongoose": "^6.3.4",
     "node-emoji": "^1.11.0",
@@ -48,6 +49,7 @@
     "ytsr": "^3.8.0"
   },
   "devDependencies": {
+    "@types/jsdom": "^16.2.14",
     "@types/node": "^17.0.35",
     "@types/node-emoji": "^1.8.1",
     "eslint": "^8.16.0",
