--- a/src/config.json
+++ b/src/config.json
@@ -3,6 +3,15 @@
     "activityName": "🦄",
     "activityType": "WATCHING",
     "status": "dnd",
-    "bitrate": "auto",
-    "volume": 1
+    "defaultVolume": 1.0,
+    "ticTacToe_thumbnail": "https://www.dropbox.com/s/fkqrplz0duuqto9/ttt.png?dl=1",
+    "ticTacToe_charField": "🔳",
+    "ticTacToe_charX": "❌",
+    "ticTacToe_charO": "⭕",
+    "fourWins_thumbnail": "https://www.dropbox.com/s/0jq0iqts4a9vque/fourwins.png?dl=1",
+    "fourWins_charField": "⚪",
+    "fourWins_charRed": "🔴",
+    "fourWins_charYellow": "🟡",
+    "trivia_thumbnail": "https://opentdb.com/images/logo-banner.png",
+    "findTheEmoji_thumbnail": "https://www.dropbox.com/s/4z3kjx5pe2kbdlw/fte.jpg?dl=1"
 }
