--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@discordjs/opus": "^0.7.0",
     "@discordjs/rest": "^0.4.1",
     "@discordjs/voice": "^0.9.0",
+    "chalk": "^5.0.1",
     "discord-api-types": "^0.33.0",
     "discord-modals": "^1.3.6",
     "discord-tts": "^1.2.1",
