closes Build a Logger #24

--- a/src/config.json
+++ b/src/config.json
@@ -1,5 +1,7 @@
 {
     "hostUserId": "98468190362828800",
+    "debug": true,
+    "verbose": true,
     "prefix": ">",
     "activityName": "🦄",
     "activityType": "WATCHING",
