--- a/src/config.json
+++ b/src/config.json
@@ -1,7 +1,8 @@
 {
     "hostUserId": "98468190362828800",
     "debug": true,
-    "verbose": true,
+    "verboseLogging": true,
+    "disableWriteLog": true,
     "prefix": ">",
     "activityName": "🦄",
     "activityType": "WATCHING",
