--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "node-emoji": "^1.11.0",
     "node-fetch": "^2.6.7",
     "open-trivia-db": "^1.0.0",
+    "opusscript": "^0.0.8",
     "sodium": "^3.0.2",
     "soundcloud-downloader": "^1.0.0",
     "ytdl-core": "^4.11.0",
