closes Fast Typer #8

--- a/src/config.json
+++ b/src/config.json
@@ -21,7 +21,8 @@
         "fourWins_charRed": "🔴",
         "fourWins_charYellow": "🟡",
         "trivia_thumbnail": "https://opentdb.com/images/logo-banner.png",
-        "findTheEmoji_thumbnail": "https://www.dropbox.com/s/4z3kjx5pe2kbdlw/fte.jpg?dl=1"
+        "findTheEmoji_thumbnail": "https://www.dropbox.com/s/4z3kjx5pe2kbdlw/fte.jpg?dl=1",
+        "fastTyper_thumbnail": "https://www.dropbox.com/s/4z3kjx5pe2kbdlw/fte.jpg?dl=1"
     },
     "music": {
         "defaultVolume": 100,
@@ -29,7 +30,7 @@
         "maxVolume": 300,
         "voiceVolumeMultiplier": 1.8,
         "trackDescriptionLengthLimit": 300,
-        "nowPlayingMessageInteractionTimeout": 12,
+        "nowPlayingMessageInteractionTimeout": 17,
         "nowPlayingTrackBarSize": 20,
         "loadingBarSize": 20,
         "postAnnouncementChance": 0.4,
